--- a/views/teacher/list.html
+++ b/views/teacher/list.html
@@ -121,10 +121,16 @@
            {{/if}}
            </td>
            <td>{{$value.tc_cellphone}}</td>
-           <td>
+           <td data-tcId='{{$value.tc_id}}' data-status='{{$value.tc_status}}'>
                <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查看</a>
                <a href="./teacher_add.html" class="btn btn-info btn-xs">编辑</a>
-               <a href="javascript::" class="btn btn-warning btn-xs">注销</a>
+               <a href="javascript:;" class="btn btn-warning btn-xs eod">
+               {{if $value.tc_status==0}}
+               注销
+               {{else}}
+               启用
+               {{/if}}
+               </a>
            </td>
        </tr>
         {{/each}}
